# VulnMCP

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
prompts/: monthly-vulnerability-report.md
vulnmcp/: server.py
vulnmcp/data/: child_to_parent_mapping.json
vulnmcp/models/: classifier.py
vulnmcp/skills/: cwe.py  gcve.py  severity.py  vulnerability_lookup.py
